# transformers-mlinter

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.ai/: AGENTS.md  context-script  review-rules.md
.ai/skills/add-mlinter-rule/: SKILL.md
.ai/skills/release/: SKILL.md
.github/workflows/: ai-review.yml  release.yml  test.yml  transformers-scan.yml
docs/: release.md
mlinter/: __init__.py  __main__.py  _helpers.py  _version.py  mlinter.py  rules.toml  trf005.py  trf015.py  trf016.py  trf017.py  trf018.py  trf019.py  trf020.py
scripts/: scan_transformers.py
tests/: test_mlinter.py
